--- a/.travis.yml
+++ b/.travis.yml
@@ -7,26 +7,30 @@ compiler:
 
 addons:
     apt:
-        package:
+        sources:
+            - boost-latest
+            - ubuntu-toolchain-r-test
+        packages:
             - build-essential
-            - cmake
-            - libboost-all-dev
-            - libboost-system1.54.0
-            - libboost-chrono1.54.0
-            - libboost-random1.54.0
+            - libboost1.55-all-dev
+            - libboost1.55-tools-dev
             - libssl-dev
+            - g++-5
+            - gcc-5
 
 before_install:
+    - if [ "$CXX" = "g++" ]; then export CXX="g++-5"; fi
     - bash tests/before_install.sh
     - export LIBTORRENT=$PWD/libtorrent-rasterbar/build/
     - export LIBRARY_PATH=$LIBTORRENT/lib/:$LIBRARY_PATH
     - export CPLUS_INCLUDE_PATH=$LIBTORRENT/include/:$CPLUS_INCLUDE_PATH
 
 install:
+    - sed -i 's/g++/g++-5/g' Makefile
     - bash tests/install.sh
 
 before_script:
     - bash tests/before_script.sh
 
 script:
-    - basg tests/script.sh
+    - bash tests/script.sh
