Send request to remote server and run integrated testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,7 @@ before_script:
 
 script:
     - bash tests/script.sh
+
+after_success:
+    - bash tests/before_deploy.sh
     - bash tests/deploy.sh
