--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ find_package(spdlog REQUIRED CONFIG)
 #list(APPEND sources ${grpc_sources})
 
 # generate git version
-execute_process(COMMAND git describe --tags
+execute_process(COMMAND git describe --tags --dirty
 	TIMEOUT 5
 	OUTPUT_VARIABLE GIT_VERSION
 	OUTPUT_STRIP_TRAILING_WHITESPACE
