--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           prerelease: >-
             ${{
-              contains(steps.get_version.outputs.tag, 'RC') ||
-              contains(steps.get_version.outputs.tag, 'rc')
+              contains(github.ref_name, 'rc') ||
+              contains(github.ref_name, 'RC') ||
+              contains(github.ref_name, 'alpha') ||
+              contains(github.ref_name, 'beta')
             }}
